<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Archetypes</string>
    <string name="button_grid_activity_label">Button Grid Demo</string>
    <string name="exception_catcher_activity_label">Exception Catcher Demo</string>
    <string name="exception_catcher_close_button_label">Close</string>
    <string name="exception_catcher_default_exception_body">No error message found...</string>
    <string name="exception_catcher_exception_label">The application encountered an error (see below for details):</string>
    <string name="exception_pitcher_activity_label">Exception Pitcher Demo</string>
    <string name="exception_pitcher_exception_button">Throw Exception</string>
    <string name="exception_pitcher_exception_label">Touch the button to throw an exception.</string>
    <string name="fragment_flinger_activity_label">Fragment Flinger</string>
    <string name="http_request_activity_label">Http Request Activity</string>
    <string name="http_request_results_label">Results</string>
    <string name="http_request_status_label">Http Request Status</string>
    <string name="http_request_status_text">No status updates to report yet...</string>
    <string name="image_mask_activity_label">Image Mask Demo</string>
    <string name="image_resource_browser_activity_label">Image Resource Browser</string>
    <string name="launcher_activity_label">Activity Launcher Demo</string>
    <string name="launcher_activity_exception_message">Unable to find an application to handle action:</string>
    <string name="launcher_camera_button_label">Take a Picture</string>
    <string name="launcher_file_picker_button_label">Choose File</string>
    <string name="launcher_microphone_button_label">Record a Sound</string>
    <string name="launcher_voice_input_web_search_button_label">Voice Input (Web Search)</string>
    <string name="launcher_voice_input_free_form_button_label">Voice Input (Free Form)</string>
    <string name="live_wallpaper_activity_label">Live Wallpaper Settings</string>
    <string name="nfc_activity_label">NFC Demo</string>
    <string name="nfc_id_default_text">No ID Detected</string>
    <string name="nfc_id_label">NFC ID:</string>
    <string name="nfc_messages_default_text">No Messages Detected</string>
    <string name="nfc_messages_label">NFC Messages:</string>
    <string name="nfc_tag_default_text">No Tag Detected</string>
    <string name="nfc_tag_label">NFC Tag:</string>
    <string name="pref_setting_instructions">Use these buttons to set the preferences for Free Speech remotely.</string>
    <string name="preference_setting_activity_label">Set Preferences Remotely</string>
    <string name="service_controller_activity_label">Service Controller Demo</string>
    <string name="startup_activity_label">Android Archetypes</string>
    <string name="touch_event_activity_label">Touch Event Demo</string>
    <string name="wallpaper_desc">Live Wallpaper Demo</string>
    <string name="recognizer_activity_label">Speech Recognizer Demo</string>
    <string name="recognizer_results_default_text">No recognizer results, touch button to use voice input.</string>
    <string name="recognizer_voice_input_button">Say Something</string>
    <string name="random_dice_activity_label">Random Dice</string>
    <string name="launcher_gallery_button_label">Choose a picture from the gallery.</string>
</resources>
