<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dip"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_marginBottom="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/nfc_id_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/nfcIdView"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/nfc_id_default_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:layout_marginBottom="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/nfc_tag_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/nfcTagView"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/nfc_tag_default_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nfc_messages_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/nfcListView"
            android:background="@drawable/darkgrayoutline"
            android:padding="5dip"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="wrap_content" >
        </ListView>
    </TableRow>

</TableLayout>